[package]
name = "rusk"
version = "1.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["cargo"] }
comfy-table = "7.2.2"
dialoguer = "0.12.0"
dirs = "6.0.0"
futures-io = "0.3.32"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
uuid = { version = "1.22.0", features = ["serde","v4"] }

[[bin]]
name = "rusk"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"